# i18n-scanner-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  vitest.config.ts
.cargo/: config.toml
.github/workflows/: CI.yml
benchmark/: bench.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  walk_utils.rs
src/analyzer/: analyzer.rs  i18n_packages.rs  mod.rs  resolver.rs  test_utils.rs  visit.rs  walker.rs
src/collector/: collector.rs  mod.rs  post_collector.rs  test_utils.rs  visit.rs  walker.rs
src/node/: i18n_types.rs  mod.rs  node.rs  node_store.rs
tests/: test.mjs  tests.spec.ts
tests/custom-i18n/: index.d.ts  index.js  index.ts  package.json
tests/fake-project/: tsconfig.json
tests/fake-project/src/: CustomHook.tsx  CustomHookInline.tsx  CustomI18n.tsx  HocComp.tsx  HookWithNamespace.tsx  I18nCodeDynamic.tsx  I18nCodeFromStringLiteral.tsx  I18nCodeFromTemplateLiteral.tsx  MemberCallT.tsx  NamespaceFromVar.tsx  NamespaceImport.tsx  NamespaceOverride.tsx  RenameBoth.tsx  RenameT.tsx  RenameUseTranslation.tsx  TArray.tsx  TArrayFromCustom.tsx  TWithNamespace.tsx  TransComp.tsx  TransNsComp.tsx  TranslationComp.tsx  TranslationNsComp.tsx  UseTranslationNsArray.tsx  globalT.ts  i18nInstanceInitOnly.tsx  index.tsx  memberT.ts
tests/fake-project/src/AliasPath/: entry.tsx  (+1 more)
(+34 files in other folders)
