[package]
edition = "2021"
name = "i18n-scanner-rs"
version = "0.0.0"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.3.0", default-features = false, features = ["napi4"] }
napi-derive = "3.2.5"
oxc_allocator = "0.73.0"
oxc_ast = "0.73.0"
oxc_ast_visit = "0.73.0"
oxc_parser = "0.73.0"
oxc_resolver = "11.4.0"
oxc_semantic = "0.73.0"
oxc_syntax = "0.73.0"
regex = { version = "1.11.2", features = [] }
oxc_minifier = "0.73.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
lto = true
strip = "symbols"
